--- a/inst/extdata/babraham_bioinformatics.qmd
+++ b/inst/extdata/babraham_bioinformatics.qmd
@@ -8,6 +8,7 @@ format:
     embed-resources: true
     toc: true
     toc-expand: true
+    code-fold: {{codefold}}
     df-print: paged
     page-layout: full
     grid:
